grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.module_docstring,
      $.pragma_directive,
      $.import_statement,
      $.from_import_statement,
      $.struct_declaration,
      $.interface_declaration,
      $.event_declaration,
      $.enum_declaration,
      $.flag_declaration,
      $.uses_statement,
      $.initializes_statement,
      $.implements_statement,
      $.exports_declaration,
      $.function_definition,
      $.constant_declaration,
      $.state_variable_declaration,
      $._newline,
    ),

    variable_annotation: $ => seq(
      choice("public", "reentrant", "immutable", "transient"),
      "(",
      optional($.soft_line_break),
      field("value", choice($.variable_annotation, $.type)),
      optional($.soft_line_break_end),
      ")",
    ),

    state_variable_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", choice($.variable_annotation, $.type)),
      optional(seq("=", field("value", $.expression))),
      $._newline,
    ),

    function_definition: $ => seq(
      repeat($.decorator),
      $.function_signature,
      ":",
      $.block,
    ),

    function_signature: $ => seq(
      "def",
      field("name", $.identifier),
      "(",
      optional($.parameter_list),
      ")",
      optional(seq("->", field("return_type", $.type))),
    ),

    parameter_list: $ => prec.right(choice(
      seq(
        $.parameter,
        repeat(seq(",", repeat($.soft_line_break), $.parameter)),
        optional(seq(",", repeat($.soft_line_break))),
        repeat($.soft_line_break),
      ),
      seq(
        repeat1($.soft_line_break),
        $.parameter,
        repeat(seq(",", repeat($.soft_line_break), $.parameter)),
        optional(seq(",", repeat($.soft_line_break))),
        repeat($.soft_line_break),
      ),
    )),

    decorator: $ => seq(
      "@",
      field("name", $.identifier),
      optional(seq("(", optional($.argument_list), ")")),
      $._newline,
    ),

    parameter: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", $.type),
      optional(seq(
        "=",
        field("default", $.expression),
      )),
    ),

    block: $ => seq(
      $._newline,
      $._indent,
      repeat1($.statement),
      $._dedent,
    ),

    assignment: $ => seq(
      field("left", choice($.assignment_target_list, $.expression)),
      "=",
      field("right", $.expression),
      $._newline,
    ),

    augmented_assignment: $ => seq(
      field("left", $.expression),
      field("operator", choice("+=", "-=", "*=", "/=", "//=", "%=")),
      field("right", $.expression),
      $._newline,
    ),

    for_statement: $ => seq(
      "for",
      field("target", choice($.typed_loop_variable, $.identifier)),
      "in",
      field("iterator", $.expression),
      ":",
      $.block,
    ),

    argument: $ => choice(
      $.expression,
      $.keyword_argument,
    ),

    argument_list: $ => prec.right(choice(
      seq(
        $.argument,
        repeat(seq(",", repeat($.soft_line_break), $.argument)),
        optional(seq(",", repeat($.soft_line_break))),
        repeat($.soft_line_break),
      ),
      seq(
        repeat1($.soft_line_break),
        $.argument,
        repeat(seq(",", repeat($.soft_line_break), $.argument)),
        optional(seq(",", repeat($.soft_line_break))),
        repeat($.soft_line_break),
      ),
    )),

    soft_line_break: $ => seq(
      $._newline,
    ),

    soft_line_break_end: $ => $._newline,

    parenthesized_expression: $ => choice(
      seq("(", $.expression, ")"),
      seq(
        "(",
        repeat1($.soft_line_break),
        choice($.wrapped_binary_expression, $.expression),
        repeat($.soft_line_break),
        ")",
      ),
    ),

    binary_expression: $ => choice(
      ...[
        ["or", PREC.or],
        ["and", PREC.and],
        ["in", PREC.compare],
        ["==", PREC.compare],
        ["!=", PREC.compare],
        ["<", PREC.compare],
        ["<=", PREC.compare],
        [">", PREC.compare],
        [">=", PREC.compare],
        ["|", PREC.bitwise_or],
        ["^", PREC.bitwise_xor],
        ["&", PREC.bitwise_and],
        ["<<", PREC.shift],
        [">>", PREC.shift],
        ["+", PREC.additive],
        ["-", PREC.additive],
        ["*", PREC.multiplicative],
        ["//", PREC.multiplicative],
        ["/", PREC.multiplicative],
        ["%", PREC.multiplicative],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", $.expression),
          field("operator", operator),
          field("right", $.expression),
        )),
      ),
      prec.right(PREC.power, seq(
        field("left", $.expression),
        field("operator", "**"),
        field("right", $.expression),
      )),
      prec.left(PREC.compare, seq(
        field("left", $.expression),
        field("operator", seq("not", "in")),
        field("right", $.expression),
      )),
    ),

    wrapped_binary_expression: $ => choice(
      ...[
        ["or", PREC.or],
        ["and", PREC.and],
        ["in", PREC.compare],
        ["==", PREC.compare],
        ["!=", PREC.compare],
        ["<", PREC.compare],
        ["<=", PREC.compare],
        [">", PREC.compare],
        [">=", PREC.compare],
        ["|", PREC.bitwise_or],
        ["^", PREC.bitwise_xor],
        ["&", PREC.bitwise_and],
        ["<<", PREC.shift],
        [">>", PREC.shift],
        ["+", PREC.additive],
        ["-", PREC.additive],
        ["*", PREC.multiplicative],
        ["//", PREC.multiplicative],
        ["/", PREC.multiplicative],
        ["%", PREC.multiplicative],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", choice($.wrapped_binary_expression, $.expression)),
          repeat($.soft_line_break),
          field("operator", operator),
          repeat($.soft_line_break),
          field("right", choice($.wrapped_binary_expression, $.expression)),
        )),
      ),
      prec.right(PREC.power, seq(
        field("left", choice($.wrapped_binary_expression, $.expression)),
        repeat($.soft_line_break),
        field("operator", "**"),
        repeat($.soft_line_break),
        field("right", choice($.wrapped_binary_expression, $.expression)),
      )),
      prec.left(PREC.compare, seq(
        field("left", choice($.wrapped_binary_expression, $.expression)),
        repeat($.soft_line_break),
        field("operator", seq("not", "in")),
        repeat($.soft_line_break),
        field("right", choice($.wrapped_binary_expression, $.expression)),
      )),
    ),

    call: $ => prec(PREC.call, seq(
      field("function", $.atom_expression),
      "(",
      optional($.argument_list),
      ")",
    )),

    external_call: $ => prec(PREC.unary, seq(
      field("kind", choice("extcall", "staticcall")),
      field("value", $.atom_expression),
    )),

    attribute: $ => prec.left(PREC.attribute, seq(
      field("value", $.atom_expression),
      ".",
      field("attribute", $.identifier),
    )),

    subscript: $ => prec.left(PREC.attribute, seq(
      field("value", choice($.atom_expression, $.list)),
      "[",
      field("index", $.expression),
      "]",
    )),

    atom_expression: $ => choice(
      $.identifier,
      $.subscript,
      $.attribute,
      $.call,
      $.atom,
    ),

    atom: $ => choice(
      $.integer,
      $.string,
      $.boolean,
      $.ellipsis,
      $.list,
      $.tuple,
      $.dict,
      $.special_builtin,
      $.parenthesized_expression,
    ),

    subscripted_type: $ => seq(
      $.identifier,
      "[",
      commaSep1(choice($.type, $.expression)),
      optional(","),
      "]",
    ),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    integer: _ => token(choice(
      /0[xX][0-9A-Fa-f_]+/,
      /0[bB][01_]+/,
      /0[oO][0-7_]+/,
      /\d[\d_]*/,
    )),
