test/corpus/untyped_for_and_floor_div_assign.txt
=========================
Untyped for and //=
=========================

@internal
def demo(_xp: uint256[2]):
    for i in range(2):
        d: uint256 = _xp[i]
    d_p: uint256 = 10
    d_p //= 2 ** 2

---

(source_file
  (function_definition
    (decorator
      name: (identifier))
    (function_signature
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (subscripted_type
            (identifier)
            (atom_expression
              (atom
                (integer)))))))
    (block
      (for_statement
        target: (identifier)
        iterator: (atom_expression
          (call
            function: (atom_expression
              (identifier))
            (argument_list
              (argument
                (atom_expression
                  (atom
                    (integer)))))))
        (block
          (state_variable_declaration
            name: (identifier)
            type: (identifier)
            value: (atom_expression
              (subscript
                value: (atom_expression
                  (identifier))
                index: (atom_expression
                  (identifier)))))))
      (state_variable_declaration
        name: (identifier)
        type: (identifier)
        value: (atom_expression
          (atom
            (integer))))
      (augmented_assignment
        left: (atom_expression
          (identifier))
        right: (binary_expression
          left: (atom_expression
            (atom
              (integer)))
          right: (atom_expression
            (atom
              (integer))))))))
